[package]
name = "tracing-syslog"
version = "0.1.0"
authors = ["Andrey Ermilov <andrerm@ya.ru>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
description = "Syslog subscriber for `tracing`"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["tracing", "syslog", "rsyslog"]

[dependencies]
tracing = { git = "https://github.com/tokio-rs/tracing", rev = "0e8f920" }
tracing-core = { git = "https://github.com/tokio-rs/tracing", rev = "0e8f920" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", rev = "0e8f920" }
chrono = "0.4"
lazy_static = "1.4"

[[example]]
name = "syslog"
