[package]
name = "tracing-syslog"
version = "0.1.0"
authors = ["Andrey Ermilov <andrerm@ya.ru>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
description = "Syslog subscriber for `tracing`"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["tracing", "syslog", "rsyslog"]

[dependencies]
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
lazy_static = "1.4"
